CPM-1641 make sure greyed out copy is readable

--- a/public/css/coverReport.css
+++ b/public/css/coverReport.css
@@ -54,3 +54,8 @@
     width: 100%;
     bottom: 60px;
 }
+
+.cover .watermarked {
+    color: rgb(189, 191, 193);
+    letter-spacing: 1px;
+}
